# farmanager-hellorust-plugin

./: Cargo.toml
