[lib]
name = "hellorust"
crate-type = ["cdylib"]

[package]
build = "build.rs"
name = "hellorust"
version = "0.1.0"
authors = ["Dmitry Pelevin <dpelevin@gmail.com>"]
edition = "2018"

[build-dependencies.farmanager_build]
git = "https://github.com/dpelevin/farmanager-api-rust-bindings"

[dependencies]
libc = "0.2.*"
widestring = "0.2.*"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
kernel32-sys = "0.2"
simplelog = "0.5"
farmanager_codegen = { git = "https://github.com/dpelevin/farmanager-api-rust-bindings" }
farmanager = { git = "https://github.com/dpelevin/farmanager-api-rust-bindings" }

[dependencies.winapi]
version = "0.3"
features = ["winuser", "minwinbase"]

[profile.release]
lto = true
